# pdfReader

./: .dockerignore  .env.ec2.example  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4e2d9f6b1c77_add_auth_foundations.py  6e1b7e3c8d63_create_initial_tables.py  9f0d2f4c5a31_use_pgvector_for_chunk_embeddings.py  a7c9e4f2b1d0_add_conversations_and_messages.py  b1e4f7a9c2d3_add_temporary_sessions.py  c3a7e1b2d4f5_add_hnsw_index_for_chunk_embeddings.py  d8f40dd46876_add_document_pages.py  e7b1c2d3f4a5_add_password_auth_sessions.py  f2c4d6e8a9b1_add_document_profiles.py  f89cded8a01a_add_pipeline_chunks_and_embeddings.py
app/: main.py
app/core/: config.py  logging.py
app/db/: __init__.py  models.py  session.py
app/schemas/: auth.py  conversation.py  document.py  health.py  session.py
app/services/: auth_service.py  chunking_service.py  conversation_service.py  document_profile_service.py  document_service.py  embedding_service.py  extraction_service.py  (+8 more)
docs/: api-flows.md  deployment.md  extraction-notes.md  retrieval-evaluation.md  schema.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
tests/: conftest.py  test_auth_service.py  test_chunking_service.py  test_config.py  test_conversation_routes.py  test_document_authz.py  test_document_upload.py  test_health_routes.py  test_ingestion_service.py  test_qa_service.py  test_retrieval_service.py  test_session_routes.py  test_storage_service.py
(+14 files in other folders)
