[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfreader"
version = "0.1.0"
description = "Temporary PDF chat backend built with FastAPI."
requires-python = "==3.10.*"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.fastapi]
entrypoint = "app.main:app"
